# Anemon

./: .gitignore  CLAUDE.md  LEADERBOARD.md  README.md  SESSION_NOTES_2026_05_10.md  SESSION_NOTES_2026_05_13.md  _bdn_eject_probe.py  _bdnq_n_smoke.py  _bdnq_smoke.py  _bdnq_up_smoke.py  anemon_page.tsx  bake_canonical.py  canonical_nvidia_loader.py  cn_xxl_ae.yaml  cn_xxl_canonical.yaml  cn_xxl_canonical_aux.yaml  cn_xxl_quat_head_perpoint.yaml  cn_xxl_quat_head_perpoint_frozen.yaml  diagnose_attrd_frozen.py  diagnose_bdnq_frozen.py  diagnose_bdnq_softres.py  diagnose_liegroup_frozen.py  diagnose_mamba_frozen.py  diagnose_mamba_full_bypass.py  diagnose_rd_softres_ep40.py  dq_hybrid_loader_append.py  dump_adafre.py  dump_attrd_ep120.py  dump_bdnq.py  dump_brd_ep120.py  dump_cherry.py  dump_dn2_n1_ep109.py  dump_fourier_aux.py  dump_n14_ep120.py  dump_net72.py  dump_net73.py  dump_qhdeltanet.py  dump_realdeltanet.py  dump_remaining.py  dump_sequmamba.py  (+139 more)
.claude/skills/remote/: SKILL.md
remote/PMamba/dataset/: nvidia_process_alt.py  nvidia_process_rgbd.py
remote/PMamba/experiments/: BRANCH_QCC_NOTES.md  CHATGPT_REVIEW.md  CHATGPT_REVIEW_V2.md  CONTRIBUTION.md  DEPTH_RIGIDITY_IDEAS.md  DEPTH_RIGIDITY_RESULTS.md  METHOD_AND_PRIOR_ART.md  QCC_RESCUE_PLAN.md  QCC_SUBTRACTION.md  QUATERNION_GAPS_PLAN.md  RIGIDITY_FORMULA.md  RIGIDITY_OPTIONS.md  STRAIN_METHOD_V8.md  TUNED_KNOBS_REPORT.md  build_dq_cache.py  cascade_fusion.py  conv1d4_pts_dynamic.py  (+245 more)
src/jlab/: __init__.py  cli.py  client.py  config.py  display.py  exceptions.py  kernel.py  models.py  notebook.py  terminal.py
(+84 files in other folders)
